-issue#1626: httpd-error.log have message about Fontconfig
-issue#1634: Default snmp quick print setting resulting in false poller ASSERTS on some php releases
-issue#1655: Correct Cacti to handle new MySQL 8.0 reserved word `system`
-issue#1658: Devices drop down should be filtered by Site
-issue#1660: Reports based upon Tree don't maintain graph order
-issue: Move Graph removal function to Graph API
-issue: Fix issue with display_custom_error_message() causing problem with system error message handling
-issue: Graph List View was not fully responsive
-issue: Typo in Dutch translations when an error occurred while downgrading
-feature#122: Support a Site Branch Type
-feature#289: Allow external nologin access for Realtime Graphs
-feature#973: Obtain users email and full name from ldap 
-feature#1347: Update automation logging to work better
-feature#1142: Add Site dropdown to the Graphs and Data Source pages
-feature#1395: Ensure messages have each new line keep the same prefix in cacti_log()
-feature#1399: Allow 'requires' to include version against a plugin
-feature#1400: User settings should have checkbox to enable overriding of global settings
-feature#1422: Automatically select the next unused data input field when clicking add on data input method
-feature#1428: Graphs: Add more information to error image
-feature#1505: Allow Device Edit from Graphs page
-feature#1527: Update Fontawesome from 4.7 to 5.0.10
-feature#1580: Support Drag & Drop for Report Items
-feature#1581: Allow Mass Adding of Graphs to Reports
-feature#1584: Allow theme selection when installing
-feature#1597: Ensure synchronised files have same attributes as originals
-feature#1593: Allow External links to auto refresh
-feature#1610: Script STDERR logging
-feature: Make Graph and Data Source suggested naming more efficient
-feature: Make tree editing responive
-feature: Add support for DDERIVE and DCOUNTER to Cacti
-feature: Add Timezone support for Remote Data Collectors